--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 
 body{
   font-family: ddag;
-  background-color:#F3F3F3;
+  background-color: white;
   overflow-x: hidden;
 }
 
@@ -15,10 +15,9 @@ h1{
 }
 
 h3{
-  padding-left: 20px;
   color:dimgray;
   text-align: center;
-  font-size: 36px;
+  font-size: 30px;
 }
 
 a{
@@ -75,8 +74,7 @@ ul{
   justify-content: center;
   align-items: center;
   background-color: white;
-  padding: 8px 12px;
-  height: 40px;
+  padding: 18px 12px;
 }
 
 .nav_logo{
@@ -149,12 +147,12 @@ ul{
   justify-content: center;
   padding-bottom: 20px;
   margin-bottom: 20px;
-  border-bottom: solid 1px gray;
+  border-bottom: 0.1px solid rgb(205, 205, 205);
 }
 
 figure img{
-  width: 120px;
-  height: 120px;
+  width: 200px;
+  height: 200px;
 }
 
 figcaption{
@@ -167,7 +165,7 @@ figcaption span{
 
 .itemName{
   max-width: 64%;
-  font-size: 1em;
+  font-size: 1.2em;
   color: #555;
   line-height: 1.3em;
   white-space: nowrap;
@@ -176,7 +174,7 @@ figcaption span{
 
 .itemAd{
   width: 200px;
-  font-size: 0.5rem;
+  font-size: 0.8rem;
   color: #9b9b9b;
   line-height: 1.3em;
   overflow: hidden;
@@ -241,6 +239,11 @@ figcaption span{
 
   .foodli{
     padding-top: 10px;
+  }
+
+  figure img{
+    width: 120px;
+    height: 120px;
   }
 
   .location-listing{
