--- a/css/about.css
+++ b/css/about.css
@@ -1,9 +1,8 @@
 .contents{
     padding: 10px;
     width: 800px;
-    margin: 0 auto;
+    margin: 0px auto;
     text-align: center;
-    border-top: 0.1px solid rgb(205, 205, 205);
 }
 
 .foodName{
