--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ h3{
 
 a{
   text-decoration-line: none;
-  color: black;
+color : inherit;
 }
 
 ul{
@@ -74,11 +74,23 @@ ul{
   justify-content: center;
   align-items: center;
   background-color: white;
-  padding: 18px 12px;
+  padding: 12px 12px;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  position: relative;
+  border-bottom: solid 1px #d2d2d2;
+}
+
+.navbar.fixed{
+  background-color: rgb(235, 126, 37);
+  transition: all ease 2s 0s;
+  position: fixed;
 }
 
 .nav_logo{
   font-size: 16px;
+  margin-right: 10px;
 }
 
 .nav_menu{
@@ -93,11 +105,18 @@ ul{
 }
 
 .nav_menu li:hover{
-  background: #e7e7e7df;
+  color: green;
 }
 
 .nav_toggleBtn{
   display: none;
+}
+
+.inner{
+  padding: 10px 0px;
+  height: 100%;
+  text-align: center;
+  position: relative;
 }
 
 .btn{
@@ -108,12 +127,6 @@ ul{
   color: black;
 }
 
-/* 헤더 */
-.inner{
-  padding: 10px 0px;
-  height: 100%;
-  text-align: center;
-}
 
 /* 본문 */
 .container{
@@ -195,7 +208,6 @@ figcaption span{
   .navbar{
     flex-direction: column;
     align-items: flex-start;
-    margin: 0px;
   }
   
   .nav_menu{
