modify : id값 수정, cursor 수정

--- a/css/main.css
+++ b/css/main.css
@@ -201,6 +201,7 @@ figcaption span{
   white-space: nowrap;
   word-wrap: normal;
   text-align: right;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
