--- a/css/about.css
+++ b/css/about.css
@@ -3,6 +3,7 @@
     width: 800px;
     margin: 0px auto;
     text-align: center;
+    margin-top: 64px;
 }
 
 .foodName{
@@ -29,6 +30,10 @@
     display: table-cell;
     text-align: left;
     height: 20px;
+}
+
+#map {
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 768px) {
