--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,6 @@
 body{
   font-family: ddag;
   background-color: white;
-
 }
 
 h1{
@@ -110,10 +109,12 @@ ul{
 }
 
 .inner{
-  margin-top: 80px;
   height: 100%;
-  text-align: center;
+  text-align: left;
+  left: 20px;
   position: relative;
+  margin-top: 100px;
+  font-size: 1.75rem;
 }
 
 .btn{
@@ -198,6 +199,36 @@ figcaption span{
   word-wrap: normal;
   text-align: right;
   cursor: pointer;
+}
+
+.swiper{
+  margin: 20px 20px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(1.0);
+  transition: transform 0.3s;
+}
+
+.swiper-slide:hover img {
+  border-radius: 20px;
+  transform: scale(1.2);
+  transition: .3s ease-in-out;
 }
 
 @media screen and (max-width: 768px) {
