--- a/css/main.css
+++ b/css/main.css
@@ -77,17 +77,18 @@ ul{
   justify-content: center;
   align-items: center;
   background-color: white;
-  padding: 12px 12px;
+  padding: 20px 12px;
   top: 0;
   width: 100%;
   z-index: 100;
   position: fixed;
-  border-bottom: solid 1px #d2d2d2;
+  border-bottom: solid 1.5px rgb(9, 111, 50);
 }
 
 .nav_logo{
-  font-size: 16px;
-  margin-right: 10px;
+  position: absolute;
+  left: 100px;
+  font-size: 18px;
 }
 
 .nav_menu{
@@ -218,16 +219,16 @@ figcaption span{
 }
 
 .swiper-image{
-  width: 280px;
-  height: 280px;
+  width: 400px;
+  height: 400px;
   border-radius: 20px;
   overflow: hidden;
   box-shadow: inset 0px 44px 18px 0px black;
 }
 
 .swiper-image img {
-  width: 100%;
-  height: 100%;
+  width: 400px;
+  height: 400px;
   display: block;
   object-fit: cover;
   transition: transform .5s ease;
@@ -248,8 +249,9 @@ figcaption span{
 .swiper-button-next {
   background-color: #fff;
   opacity: 0.8;
-  width: 24px;
-  height: 24px;
+  width: 48px;
+  height: 48px;
+  border: 2px solid rgb(9, 111, 50);
   border-radius: 50%;
   color: black !important;
 }
@@ -281,6 +283,7 @@ figcaption span{
 
   .nav_logo{
     font-size: 14px;
+    left: 10px;
   }
   
   .nav_toggleBtn{
@@ -296,6 +299,11 @@ figcaption span{
   }
 
   .swiper-image{
+    width: 140px;
+    height: 140px;
+  }
+
+  .swiper-image img{
     width: 140px;
     height: 140px;
   }
@@ -344,6 +352,11 @@ figcaption span{
 @media (min-width: 992px) and (max-width: 1199px) {
   .contents{
       width: 100%;
+  }
+
+  .swiper-image{
+    width: 200px;
+    height: 200px;
   }
 }
 
