--- a/css/main.css
+++ b/css/main.css
@@ -219,16 +219,14 @@ figcaption span{
 }
 
 .swiper-image{
-  width: 400px;
-  height: 400px;
   border-radius: 20px;
   overflow: hidden;
   box-shadow: inset 0px 44px 18px 0px black;
 }
 
 .swiper-image img {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   display: block;
   object-fit: cover;
   transition: transform .5s ease;
