--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,7 @@ ul{
   padding: 20px 12px;
   top: 0;
   width: 100%;
+  height: 28px;
   z-index: 100;
   position: fixed;
   border-bottom: solid 1.5px rgb(9, 111, 50);
@@ -112,11 +113,15 @@ ul{
 
 .inner{
   height: 100%;
-  text-align: left;
+  text-align: center;
   left: 20px;
   position: relative;
   margin-top: 100px;
   font-size: 1.75rem;
+}
+
+.inner p {
+  margin: 10px 0;
 }
 
 .btn{
@@ -263,20 +268,22 @@ figcaption span{
 @media screen and (max-width: 768px) {
   /**메뉴바**/
   .navbar{
-    flex-direction: column;
+    margin: 0;
     align-items: flex-start;
   }
   
   .nav_menu{
-    flex-direction: column;
     align-items: center;
     width: 100%;
     display: none;
+    flex-direction: column;
   }
 
   .nav_menu li{
     width: 100%;
+    background-color: #ffffff;
     text-align: center;
+    display: inline-block;
   }
 
   .nav_logo{
