css 수정 및 카카오톡 버튼 추가

--- a/css/about.css
+++ b/css/about.css
@@ -36,6 +36,14 @@
     margin: 0 auto;
 }
 
+button{
+    margin-top: 10px;
+    margin-right: 10px;
+    height: 40px;
+    width: 160px;
+    font-family: 부대;
+}
+
 @media screen and (max-width: 768px) {
     h3{
         font-size: 20px;
